<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformasiActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Informasi layanan"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:cardBackgroundColor="@color/primary" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_marginTop="5dp"
                    android:background="@color/primary">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/Hari"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/Layanan"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                </TableRow>
                <TableRow android:background="@color/textColorHint">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/senin"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="Konseling KB dan Kesehatan Reproduksi, Konseling keluarga Balita dan Anak"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                </TableRow>

                <TableRow android:background="@color/textColorHint">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/selasa"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                </TableRow>

                <TableRow android:background="@color/textColorHint">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/rabu"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="Konseling Pranikah, Konseling Keluarga Harmonis"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                </TableRow>

                <TableRow android:background="@color/textColorHint">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/Kamis"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="Konseling Keluarga Remaja dan Remaja"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                </TableRow>

                <TableRow android:background="@color/textColorHint">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/jumat"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="Konseling Keluarga Lansia dan Lansia"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Layanan Data"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:cardBackgroundColor="@color/primary" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="213dp">

            </ListView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/menu" />
</androidx.constraintlayout.widget.ConstraintLayout>